--- a/react-app/package.json
+++ b/react-app/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "axios": "^1.4.0",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router": "^6.11.2",
+    "react-router-dom": "^6.11.2",
+    "react-router-native": "^6.11.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
